Closed Bug 535630 Opened 16 years ago Closed 16 years ago

scroll position updates shouldn't start the Carbon plugin idle event timer

Categories

(Core Graveyard :: Plug-ins, defect)

All
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: jaas, Assigned: jaas)

Details

Attachments

(1 file)

Attached patch fix v1.0Splinter Review
Scroll position updates shouldn't start the Carbon plugin idle event timer. That should only happen during FixUpPluginWindow so the starting and stopping is balanced.
Attachment #418237 - Flags: review?(smichaud)
Attachment #418237 - Flags: review?(smichaud) → review+
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: