Scroll position updates shouldn't start the Carbon plugin idle event timer. b=535630 r=smichaud