layout/generic/nsObjectFrame.cpp
@@ -3614,8 +3614,6 @@ nsresult nsPluginInstanceOwner::ScrollPositionDidChange(nsIScrollableView* aScro
       pluginWidget->EndDrawPlugin();
     }
   }
-
-  StartTimer(PR_TRUE);
 #endif
   return NS_OK;
 }
